[package]
name = "ns_defaults"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Noah Shomette <noahshomette@gmail.com>"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.*", features = ["bevy_asset", "bevy_scene", "bevy_gilrs", "bevy_winit", "animation", "x11", "png", "filesystem_watcher", "bevy_render", "serialize" ], default-features = false }
bevy_ecs_tilemap = "0.10.0"
serde = { version = "1.0.125", features = ["derive"] }
rand = "0.8.5"
chrono = { version = "0.4.23", features = ["std", "serde"] }
bevy_ggf = {git = "https://github.com/NoahShomette/bevy_ggf.git"}
leafwing-input-manager = "0.9.1"

[dev-dependencies]
bevy = { version = "0.10.*", features = ["bevy_asset", "bevy_scene", "bevy_gilrs", "bevy_winit", "animation", "x11", "png", "filesystem_watcher", "bevy_render", "serialize", "trace_chrome", "trace" ], default-features = false }

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", features = [], default-features = false }